First finished version

--- a/_posts/2019-2-24-SOL.md
+++ b/_posts/2019-2-24-SOL.md
@@ -4,6 +4,7 @@ categories: posts
 title: SOL
 tags: [CAD, FRC 333]
 date-string: FEBRUARY 24, 2019
+featured-image: \images\confetti_2019-Sep-01_05-25-37PM-000_CustomizedView29665510221_png_alpha.png
 ---
 
 <center>
